--- a/config.json
+++ b/config.json
@@ -4,13 +4,18 @@
 
     "forecast": {
       "groupby": "day",
-      "handle-missing": "mean"
+      "handle-missing": "mean",
+
+      "period": {
+        "start": "1/01/2021",
+        "stop": "31/07/2021"
+      }
     }
   },
 
   "forecast": {
-    "n-test": 10,
-    "n-predict": 10,
+    "n-test": 15,
+    "n-predict": 30,
 
     "ARIMA": {
       "start_p": 1,
