--- a/config.json
+++ b/config.json
@@ -8,8 +8,7 @@
     },
 
     "forecast": {
-      "groupby": "day",
-      "handle-missing": "mean",
+      "groupby": "week",
 
       "period": {
         "start": "1/01/2021",
@@ -19,8 +18,8 @@
   },
 
   "forecast": {
-    "n-test": 15,
-    "n-predict": 30,
+    "n-test": 3,
+    "n-predict": 4,
 
     "ARIMA": {
       "start_p": 1,
@@ -54,7 +53,7 @@
       "holidays_prior_scale": 10.0,
       "changepoint_prior_scale": 0.05,
       "mcmc_samples": 0,
-      "interval_width": 0.80,
+      "interval_width": 0.8,
       "uncertainty_samples": 1000,
       "stan_backend": null
     }
